--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Tortoiseshell Optics</title>
+    <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
+
+  <!-- Main site container -->
+
   <body>
+
+    <!-- Header Section -->
+
+    <header>
+    </header>
+
+    <!-- Services Offered -->
+
+    <main>
+    </main>
+
+    <!-- Business Information -->
+
+    <section>
+    </section>
+
+    <!-- Footer Section -->
+
+    <footer>
+    </footer>
 
   </body>
 </html>
