--- a/index.html
+++ b/index.html
@@ -7,28 +7,67 @@
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
 
-  <!-- Main site container -->
-
   <body>
 
     <!-- Header Section -->
 
     <header>
+      <nav class="container">
+        <div class="banner">
+          <img src="./resources/images/logo-white.png" alt="Tortoiseshell Optics Logo"/>
+          <span>Tortoiseshell Optics</span>
+        </div>
+        <div class="menu">
+          <span><a href="#">Services</a></span>
+          <span><a href="#">Products</a></span>
+          <span><a href="#">Contact</a></span>
+        </div>
+        <div class="mobile-nav">
+          <span><a href="#">Menu</a></span>
+        </div>
+      </nav>
+      <div class="headline container">
+        <div class="main-headline">
+          <h1>DON'T JUST LOOK, SEE.</h1>
+        </div>
+      </div>
     </header>
 
     <!-- Services Offered -->
 
-    <main>
+    <main class="supporting">
+      <div class="service">
+        <img class="paper" src="./resources/images/paper-icon.png" alt="Paper Icon" />
+        <span>Comprehensive Exams</span>
+      </div>
+      <div class="service">
+        <img src="./resources/images/ruler-icon.png" alt="Ruler Icon" />
+        <span>Custom Fittings</span>
+      </div>
+      <div class="service">
+        <img src="./resources/images/truck-icon.png" alt="Truck Icon" />
+        <span>Fast Delivery</span>
+      </div>
     </main>
 
     <!-- Business Information -->
 
-    <section>
+    <section class="supporting container">
+      <div class="info">
+        <div class="title">PHILOSOPHY</div>
+        <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+      </div>
+      <div class="info">
+        <div class="title">APPOINTMENTS</div>
+        <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
+      </div>
     </section>
 
     <!-- Footer Section -->
 
-    <footer>
+    <footer class="container">
+      <img src="./resources/images/logo-black.png" alt="Tortoiseshell Optics Logo" />
+      <span>Copyright Tortoiseshell Optics</span>
     </footer>
 
   </body>
